# zhiguli-2024-game-bot

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
config/: config.yaml
deploy/: docker-compose.j2.yaml  inventory.yaml  playbook.yaml  requirements.yml
runtime/: box-bot
src/: configurator.py  main.py
src/data/: config.py  db_model.py  minio_client.py
src/exceptions/: config.py  db.py  tg.py
src/handlers/: basic.py  district_fight.py  district_sell.py  districts_map.py  error.py  helpers.py
src/tg/: bot_data.py  context.py  persistence.py
